# proxmox-terraform-ansible

./: 1.setup-new-proxmox-host.md  2.prepare-terraform-access.md  3.prepare-ansible-access.md  4.setup-port-forwards.md  README.md
ansible-example/inventory/: proxmox.json  proxmox.py
ansible-example/inventory/group_vars/: all.yaml
scripts/proxmox-port-forwarding/inventory/: proxmox.py  pyproject.toml
scripts/proxmox-port-forwarding/inventory/group_vars/: all.yaml
terraform-example/modules/environment/example/: main.tf
terraform-example/modules/environment/example/files/: cloud_init_deb10.cloud_config
terraform-example/modules/instances/: resource.tf
