[tool.poetry]
name = "ansible-proxmox-inventory"
version = "0.1.0"
description = "Ansible dynamic inventory for proxmox"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
